--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
     "private": true,
     "scripts": {
         "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "serve": "vite preview"
     },
     "devDependencies": {
         "@popperjs/core": "^2.11.6",
         "@vitejs/plugin-vue": "^4.3.4",
         "axios": "^1.1.2",
-        "bootstrap": "^5.2.3",
+        "bootstrap": "^5.3.2",
         "laravel-vite-plugin": "^0.7.8",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
         "sass": "^1.56.1",
         "vite": "^4.4.9"
+    },
+    "dependencies": {
+        "tablesorter": "^2.31.3"
     }
 }
